--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,14 +1,32 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Quicksand', sans-serif;
   }
   
   h2,
   h3 {
-    color: #3800d1;
+    color: #00a2c6;
   }
   
   footer {
-    padding: 5px;
+    padding: 20px;
     color: white;
-    background-color: #4500c6;
+    background-color: #00a2c6;
+  
+    text-align: center;
+    font-weight: bold;
+  }
+  
+  nav a {
+    font-size: 18px;
+  
+    font-weight: 400;
+    text-decoration: none;
+  }
+  
+  nav a:hover {
+    font-weight: bold;
+  }
+  
+  .profile header {
+    text-align: center;
   }
